SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Upgraded to latest RSyntax version 6.0.1.

The "Find Alias" dialog (Ctrl+Alt+Shift+G or Ctrl+Alt+Shift+F) now offers to modify Aliases.

The "Save file as" dialog now offers a check box to move the file instead of copying it.
  If the file is under GIT control and is moved inside its GIT repository
  it will be committed after being moved to keep its GIT history intact.

Data types BLOB and CLOB loading configuration was restructured and fixed.
  Both data types now offer the following loading options:
   - Read contents when table is first loaded (offers to limit the amount of data to read)
   - Read contents when table cell becomes visible
   - Read contents when table cell is focused
   - Do not read contents
  See menu File --> Global Preferences --> tab "Data Type Controls" --> sections BLOB and CLOB


New command line options to connect to an Alias on application start up:
  | Short option | Long option   | Description                                               |
  | ------------ | ------------- | --------------------------------------------------------- |
  | cu           | connect-url   | Connect to JDBC-URL (requires exiting Alias for JDBC-URL) |
  | ca           | connect-alias | Connect to Alias (Alias name)                             |

SQL result: New right right mouse menu "Show column details ..."

File export: Export file and command text fields were changed into drop downs with history.

SQL result: Made several labels on Info tab copyable.

Saved Sessions: Name of current Saved Session is displayed in SQuirreL's main window title.

Export of multiple SQL results.
  When exporting to MS Excel, multiple data sheets/tabs in the same file are created.