@@ -84,5 +84,5 @@ jars13.noi18n=true
 
 classname14=net.sourceforge.squirrel_sql.plugins.laf.flatlaf.FlatLafPlaceholder
 classname14.noi18n=true
-jars14=flatlaf-2.4.jar
+jars14=flatlaf-3.0.jar
 jars14.noi18n=true
